--- a/src/assets/scss/vuexy/layout/_theNavbar.scss
+++ b/src/assets/scss/vuexy/layout/_theNavbar.scss
@@ -35,6 +35,7 @@
   .vx-navbar {
     .vs-con-items {
       width: 100%;
+      // background-color: #f3b520;
 
       .search-full-container {
         background: $white;
